# SmartBotuz

./: .env.example  .replit  DEPLOYMENT.md  README.md  app.py  app_broken.py  daily_job.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  robots.txt  setup.py  sitemap.xml
attached_assets/: Pasted--A-lo-Siz-SmartBot-uz-loyihasini-yanada-rivojlantirdingiz-endi-aloqa-tizimi-to-liq-ishlaydi-ma-1756789269550_1756789269550.txt  Pasted--Admin-panelda-yangi-portfolio-loyiha-qo-shish-tizimi-ishlayotganini-tekshiring-Agar-barcha-narsa-t-1756792668054_1756792668054.txt  Pasted--Maqsad-Har-bir-portfolio-loyihasi-uchun-Batafsil-tugmasi-bo-lsin-unga-bosganda-esa-loyiha-haq-1756790168532_1756790168533.txt  Pasted--Prompt-Gemini-Flash-API-orqali-SmartBot-uz-uchun-5-ta-aqlli-funksiya-yaratish-Siz-kuchli-AI--1756795925695_1756795925696.txt  Pasted--Prompt-SmartBot-uz-loyihasini-Render-com-da-deploy-qilish-uchun-to-liq-SEO-va-tez-ishlashni-ta-m-1756793947655_1756793947656.txt  Pasted--Sizning-maqsadingiz-AI-funksiyalarni-mujassamlashish-Maqsad-AI-funksiyalari-bosh-sahifada-1756828073553_1756828073553.txt  Pasted--Tabriklaymiz-SmartBot-uz-loyihasini-Replit-Agentdan-to-liq-Replit-muhitiga-muvaffaqiyatli-ko-1756788161349_1756788161350.txt  Pasted--Yangi-Konseptsiya-SmartBot-uz-O-z-o-zini-Rivojlantiruvchi-AI-Agent-Siz-nima-qilasiz-Faqat--1756828849907_1756828849908.txt  Pasted--Yangi-Konseptsiya-SmartBot-uz-O-z-o-zini-Rivojlantiruvchi-AI-Agent-Siz-nima-qilasiz-Faqat--1756829174413_1756829174413.txt  (+9 more)
data/: blog.json  messages.json  portfolio.json  services.json
(+25 files in other folders)
