[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.32.0",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-magic>=0.4.27",
    "python-slugify>=8.0.4",
    "python-telegram-bot>=22.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "slugify>=0.0.1",
    "werkzeug>=3.1.3",
    "whitenoise>=6.9.0",
]
